# NumLoRA

./: .gitignore  CHANGELOG.md  EXPERIMENT_STATUS.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
configs/: backbones.yaml  baselines.yaml  datasets.yaml
demo/: app.py
docs/: ablation-plan.md  architecture.md  method.md  reviewer-defense.md
docs/IEEE-ICC2026-accepted/: IEEE-conference-template-062824.tex  IEEEtran.bib
results/breadth/: lora_r8_electricity.json  lora_r8_exchange.json  lora_r8_ili.json  lora_r8_traffic.json  lora_r8_weather.json  numlora_electricity.json  numlora_exchange.json  numlora_ili.json  numlora_traffic.json  numlora_weather.json
results/full/: dora_r8_ett_h1_mr0.1_seed123.json  dora_r8_ett_h1_mr0.1_seed42.json  dora_r8_ett_h1_mr0.1_seed456.json  dora_r8_ett_h1_mr0.3_seed123.json  dora_r8_ett_h1_mr0.3_seed42.json  dora_r8_ett_h1_mr0.3_seed456.json  dora_r8_ett_h1_mr0.5_seed123.json  dora_r8_ett_h1_mr0.5_seed42.json  dora_r8_ett_h1_mr0.5_seed456.json  dora_r8_exchange_mr0.1_seed123.json  dora_r8_exchange_mr0.1_seed42.json  dora_r8_exchange_mr0.3_seed123.json  dora_r8_exchange_mr0.3_seed42.json  dora_r8_exchange_mr0.5_seed123.json  dora_r8_exchange_mr0.5_seed456.json  dora_r8_traffic_mr0.1_seed42.json  dora_r8_traffic_mr0.1_seed456.json  dora_r8_traffic_mr0.3_seed42.json  dora_r8_weather_mr0.1_seed123.json  dora_r8_weather_mr0.1_seed42.json  dora_r8_weather_mr0.1_seed456.json  dora_r8_weather_mr0.3_seed123.json  dora_r8_weather_mr0.3_seed42.json  dora_r8_weather_mr0.3_seed456.json  dora_r8_weather_mr0.5_seed123.json  dora_r8_weather_mr0.5_seed42.json  dora_r8_weather_mr0.5_seed456.json  lora_r8_ett_h1_mr0.1_seed123.json  lora_r8_ett_h1_mr0.1_seed42.json  lora_r8_ett_h1_mr0.1_seed456.json  lora_r8_ett_h1_mr0.3_seed123.json  lora_r8_ett_h1_mr0.3_seed42.json  lora_r8_ett_h1_mr0.3_seed456.json  lora_r8_ett_h1_mr0.5_seed123.json  lora_r8_ett_h1_mr0.5_seed42.json  lora_r8_ett_h1_mr0.5_seed456.json  lora_r8_exchange_mr0.1_seed123.json  lora_r8_exchange_mr0.1_seed42.json  lora_r8_exchange_mr0.1_seed456.json  lora_r8_exchange_mr0.3_seed123.json  (+226 more)
results/full/ablation/: numlora_ctgs_only_ett_h1_mr0.1_seed123.json  (+188 more)
results/quick/: lora_r8_ett_h1_mr0.3_seed42.json  lora_r8_smollm_ett_h1_mr0.3_seed42.json  lora_r8_smollm_v2.json  numlora_full_ett_h1_mr0.3_seed42.json  numlora_full_smollm_ett_h1_mr0.3_seed42.json  numlora_full_smollm_v2.json
results/smoke/: lora_r8_ett_h1_mr0.3_seed42.json  numlora_full_ett_h1_mr0.3_seed42.json
scripts/analysis/: generate_tables.py  generate_tables.sh
scripts/data/: download_datasets.sh
scripts/experiments/: launch_ablation.sh  launch_all_backbones.sh  launch_clean_sweep.sh  launch_dora_sweep.sh  launch_full.sh  launch_quick.sh  launch_qwen_sweep.sh  launch_smoke.sh  train.py
src/data/: classification.py  dataset.py  forecasting.py
src/integrations/: peft_numlora.py
src/models/: apply.py  classification_model.py  forecasting_model.py  imputation_model.py  mai.py  numlora.py
tests/: README.md  test_numlora.py
