[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "numlora"
version = "0.1.0"
description = "NumLoRA: Prior-Free Parameter-Efficient Fine-Tuning for Numerical Data"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Franck Junior Aboya Messou", email = "franckjunioraboya.messou@ieee.org"},
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.38.0",
    "peft>=0.9.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.65.0",
    "datasets>=2.16.0",
    "accelerate>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
