[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "numlora"
version = "0.4.0"
description = "NumLoRA: Calibrating Low-Rank Adaptation for Continuous-Valued Inputs"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Franck Junior Aboya Messou", email = "franckjunioraboya.messou@ieee.org"},
]
keywords = [
    "lora", "peft", "parameter-efficient-fine-tuning",
    "time-series", "numerical-data", "llm", "transformers",
    "imputation", "forecasting", "gradient-scaling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.38.0",
    "peft>=0.9.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.65.0",
    "datasets>=2.16.0",
    "accelerate>=0.26.0",
]

[project.optional-dependencies]
demo = ["gradio>=4.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/hosei-university-iist-yulab/NumLoRA"
Repository = "https://github.com/hosei-university-iist-yulab/NumLoRA"
Issues = "https://github.com/hosei-university-iist-yulab/NumLoRA/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
